--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^11.0.1",
     "@types/stylis": "^4.2.5",
-    "csstype": "^3.1.3",
     "husky": "^8.0.3",
     "size-limit": "^11.0.1",
     "tsdx": "^0.14.1",
@@ -58,6 +57,7 @@
     "wy-helper": "^0.1.0"
   },
   "dependencies": {
-    "stylis": "^4.3.1"
+    "stylis": "^4.3.1",
+    "csstype": "^3.1.3"
   }
 }
