--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -1,58 +1,50 @@
 {
+  "name": "wy-helper",
+  "author": "wy2010344",
   "version": "0.1.0",
   "license": "MIT",
-  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "module": "dist/index.mjs",
+  "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./tokenParser": {
+      "types": "./dist/tokenParser/index.d.ts",
+      "import": "./dist/tokenParser.mjs",
+      "require": "./dist/tokenParser.js"
+    },
+    "./kanren": {
+      "types": "./dist/kanren.d.ts",
+      "import": "./dist/kanren.mjs",
+      "require": "./dist/kanren.js"
+    },
+    "./Vue": {
+      "types": "./dist/Vue.d.ts",
+      "import": "./dist/Vue.mjs",
+      "require": "./dist/Vue.js"
+    }
+  },
   "files": [
     "dist",
     "src",
-    "kanren",
     "tokenParser",
+    "kanren",
     "Vue"
   ],
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build && sh ./scripts/postbuild.sh",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build && sh ./scripts/postbuild.sh",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "dev": "vite",
+    "build": "tsc && vite build && sh './scripts/postbuild.sh'",
+    "preview": "vite preview",
+    "prepare": "yarn build"
   },
-  "peerDependencies": {},
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "name": "wy-helper",
-  "author": "wyknmjj",
-  "module": "dist/esm/index.js",
-  "size-limit": [
-    {
-      "path": "dist/wy-helper.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/wy-helper.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^11.0.1",
-    "husky": "^8.0.3",
-    "size-limit": "^11.0.1",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.11.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "vite-plugin-dts": "^3.7.1"
   }
 }
