--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.0",
+  "version": "0.1.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -54,10 +54,11 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "wy-helper": "^0.1.0"
+    "wy-helper": "^0.1.2"
   },
   "dependencies": {
+    "csstype": "^3.1.3",
     "stylis": "^4.3.1",
-    "csstype": "^3.1.3"
+    "wy-helper": "^0.1.2"
   }
 }
