--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -58,7 +58,6 @@
   },
   "dependencies": {
     "csstype": "^3.1.3",
-    "stylis": "^4.3.1",
-    "wy-helper": "file:.yalc/wy-helper"
+    "stylis": "^4.3.1"
   }
 }
