--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -1,63 +1,45 @@
 {
-  "version": "0.1.2",
+  "name": "wy-dom-helper",
+  "author": "wy2010344",
+  "version": "0.1.5",
   "license": "MIT",
-  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "module": "dist/index.mjs",
+  "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./contentEditable": {
+      "types": "./dist/contentEditable/index.d.ts",
+      "import": "./dist/contentEditable.mjs",
+      "require": "./dist/contentEditable.js"
+    }
+  },
   "files": [
     "dist",
     "src",
     "contentEditable"
   ],
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build && sh ./scripts/postbuild.sh",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build &&  sh ./scripts/postbuild.sh",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "build": "tsc && vite build",
+    "prepare": "yarn build"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
-  "name": "wy-dom-helper",
-  "author": "wyknmjj",
-  "module": "dist/esm/index.js",
-  "size-limit": [
-    {
-      "path": "dist/wy-dom-helper.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/wy-dom-helper.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^11.0.1",
-    "@types/stylis": "^4.2.5",
-    "husky": "^8.0.3",
-    "size-limit": "^11.0.1",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^20.14.7",
+    "@types/stylis": "^4.2.6",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1",
+    "vite-plugin-dts": "^3.9.1"
   },
   "peerDependencies": {
-    "wy-helper": "^0.1.2"
+    "wy-helper": "^0.1.4"
   },
   "dependencies": {
     "csstype": "^3.1.3",
-    "stylis": "^4.3.1"
+    "stylis": "^4.3.1",
+    "wy-helper": "^0.1.4"
   }
 }
