--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wy-helper",
   "author": "wy2010344",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "license": "MIT",
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
@@ -41,7 +41,7 @@
     "Vue"
   ],
   "scripts": {
-    "build": "tsc && vite build && sh './scripts/postbuild.sh'",
+    "build": "tsc && vite build",
     "prepare": "yarn build"
   },
   "devDependencies": {
