--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wy-helper",
   "author": "wy2010344",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "license": "MIT",
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
@@ -31,6 +31,11 @@
       "types": "./dist/Vue.d.ts",
       "import": "./dist/Vue.mjs",
       "require": "./dist/Vue.js"
+    },
+    "./ObserverCenter": {
+      "types": "./dist/observerCenter/index.d.ts",
+      "import": "./dist/observerCenter.mjs",
+      "require": "./dist/observerCenter.js"
     }
   },
   "files": [
