--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -40,6 +40,6 @@
   "dependencies": {
     "csstype": "^3.1.3",
     "stylis": "^4.3.1",
-    "wy-helper": "^0.1.4"
+    "wy-helper": "file:.yalc/wy-helper"
   }
 }
