--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wy-dom-helper",
   "author": "wy2010344",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "license": "MIT",
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
@@ -18,6 +18,11 @@
       "require": "./dist/contentEditable.js"
     }
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wy2010344/wy-helper.git",
+    "directory": "wy-dom-helper"
+  },
   "files": [
     "dist",
     "src",
@@ -32,14 +37,14 @@
     "@types/stylis": "^4.2.6",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
-    "vite-plugin-dts": "^3.9.1"
+    "vite-plugin-dts": "^3.9.1",
+    "wy-helper": "^0.1.6"
   },
   "peerDependencies": {
-    "wy-helper": "^0.1.4"
+    "wy-helper": "^0.1.6"
   },
   "dependencies": {
     "csstype": "^3.1.3",
-    "stylis": "^4.3.1",
-    "wy-helper": "file:.yalc/wy-helper"
+    "stylis": "^4.3.1"
   }
 }
