--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -1,11 +1,16 @@
 {
   "name": "wy-helper",
   "author": "wy2010344",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "license": "MIT",
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wy2010344/wy-helper.git",
+    "directory": "wy-helper"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
