--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -38,7 +38,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-dts": "^3.9.1",
-    "wy-helper": "file:.yalc/wy-helper"
+    "wy-helper": "^0.1.8"
   },
   "peerDependencies": {
     "wy-helper": "^0.1.8"
