--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wy-helper",
   "author": "wy2010344",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "license": "MIT",
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
@@ -62,7 +62,7 @@
     "ts": "tsc --noEmit --incremental --skipLibCheck",
     "ts:watch": "yarn ts --watch"
   },
-  "peerDependencies": {
+  "dependencies": {
     "d3-binarytree": "^1.0.2",
     "d3-octree": "^1.1.0",
     "d3-quadtree": "^3.0.1"
