--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wy-dom-helper",
   "author": "wy2010344",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "license": "MIT",
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
@@ -45,15 +45,15 @@
     "@types/stylis": "^4.2.6",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
-    "vite-plugin-dts": "^3.9.1",
-    "wy-helper": "file:.yalc/wy-helper"
+    "vite-plugin-dts": "^3.9.1"
   },
   "peerDependencies": {
-    "wy-helper": "^0.1.12"
+    "wy-helper": "^0.1.13"
   },
   "dependencies": {
     "csstype": "^3.1.3",
     "linebreak": "^1.1.0",
-    "stylis": "^4.3.1"
+    "stylis": "^4.3.1",
+    "wy-helper": "^0.1.13"
   }
 }
