--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wy-helper",
   "author": "wy2010344",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "license": "MIT",
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
@@ -60,7 +60,8 @@
     "build": "tsc && vite build",
     "prepare": "yarn build",
     "ts": "tsc --noEmit --incremental --skipLibCheck",
-    "ts:watch": "yarn ts --watch"
+    "ts:watch": "yarn ts --watch",
+    "test": "vitest"
   },
   "dependencies": {
     "d3-binarytree": "^1.0.2",
@@ -72,6 +73,7 @@
     "@types/node": "^20.11.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-plugin-dts": "^3.7.1"
+    "vite-plugin-dts": "^4.5.0",
+    "vitest": "^3.0.7"
   }
 }
