--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -73,7 +73,6 @@
     "@types/node": "^20.11.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
-    "vite-plugin-dts": "^4.5.0",
-    "vitest": "^3.0.7"
+    "vite-plugin-dts": "^4.5.0"
   }
 }
