--- a/wy-dom-helper/package.json
+++ b/wy-dom-helper/package.json
@@ -54,6 +54,6 @@
     "csstype": "^3.1.3",
     "linebreak": "^1.1.0",
     "stylis": "^4.3.1",
-    "wy-helper": "^0.1.14"
+    "wy-helper": "file:.yalc/wy-helper"
   }
 }
