--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -95,7 +95,10 @@
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/d3-quadtree": "^3.0.6",
-    "tsdown": "latest"
+    "@types/node": "^24.7.2",
+    "lint-staged": "^16.2.4",
+    "tsdown": "latest",
+    "vite": "^7.1.9"
   },
   "packageManager": "pnpm@10.18.2+sha512.9fb969fa749b3ade6035e0f109f0b8a60b5d08a1a87fdf72e337da90dcc93336e2280ca4e44f2358a649b83c17959e9993e777c2080879f3801e6f0d999ad3dd"
 }
