--- a/wy-helper/package.json
+++ b/wy-helper/package.json
@@ -3,6 +3,20 @@
   "author": "wy2010344",
   "version": "1.0.0",
   "license": "MIT",
+  "description": "A comprehensive JavaScript utility library with various helper functions",
+  "keywords": [
+    "javascript",
+    "utilities",
+    "helper",
+    "tools",
+    "kanren",
+    "parser",
+    "router"
+  ],
+  "homepage": "https://github.com/wy2010344/wy-helper#readme",
+  "bugs": {
+    "url": "https://github.com/wy2010344/wy-helper/issues"
+  },
   "typings": "dist/index.d.ts",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
